| Summary: | ASTERISK-26351: astobj2: Header macro's should deal with error's from ao2_ref. | ||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |
| Date Opened: | 2016-09-09 08:30:39 | Date Closed: | 2016-09-15 13:31:23 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Core/AstMM |
| Versions: | 13.11.0 14.0.0-beta2 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | * ao2_t_bump - return NULL.
* ao2_t_replace - set the destination to NULL. * ao2_ref_and_lock - return 0 to indicate failure. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-09-09 08:30:40.342-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. | ||