astobj2: Header macro's should deal with error's from ao2_ref.

* ao2_t_bump - return NULL.
* ao2_t_replace - set the destination to NULL.
* ao2_ref_and_lock - return 0 to indicate failure.

ASTERISK-26351 #close

Change-Id: I5e06d27fb6667f54c960023aa3b93d95b07147de